--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -6,6 +6,35 @@
   scroll-behavior: smooth;
 }
 
+.cont-error {
+  text-align: center;
+  margin-top: 10vh;
+
+  h1 {
+    font-size: 3vw;
+    text-transform: uppercase;
+  }
+
+  p {
+    font-size: 2vw;
+    font-weight: 100;
+    margin-bottom: 5vh;
+  }
+
+  .btn-error {
+    background-color: #ffaa00;
+    padding: 1vw 1.5vw;
+    border-radius: 0.5vw;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: rgb(22, 21, 21);
+  }
+}
+
+.teemo {
+  width: 15%;
+}
+
 .btn-up i {
   color: #ffaa00;
   background: black;
