--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -221,7 +221,7 @@ header {
   @include cont-titulo-banner;
   top: 35vh;
   left: 15vw;
-  animation-name: zoomInDown;
+  animation-name: backInDown;
   animation-duration: 1s;
   &__titulo {
     @include titulo-banner;
@@ -245,8 +245,6 @@ header {
   &__cont-textos {
     width: 50vw;
     margin-bottom: 10vh;
-    animation-name: fadeInLeft;
-    animation-duration: 1.7s;
     h2 {
       @include h2;
     }
